// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package account.service.v1;


option go_package = "api";
option (gogoproto.goproto_getters_all) = false;


message RegisterReq {
  string email = 1 [(gogoproto.moretags) = 'validate:"required,email" json:"email"'];
  string password = 2 [(gogoproto.moretags) = 'validate:"required" json:"password"'];
}

message RegisterResp {
  string uid = 1 [(gogoproto.moretags) = 'json:"uid"'];
}

service Account {
  rpc Ping(.google.protobuf.Empty) returns (.google.protobuf.Empty);
  rpc Register(RegisterReq) returns (RegisterResp) {
    option (google.api.http) = {
      post: "/account/register"
    };
  };
  rpc Auth (AuthReq) returns (AuthResp){
    option (google.api.http) = {
      get: "/account/auth"
    };
    
  };
}

message AuthReq{
  string email = 1 [(gogoproto.moretags) = 'validate:"required"'];
  string password = 2 [(gogoproto.moretags) = 'validate:"required"'];
}

message AuthResp{
  string token = 1 [(gogoproto.moretags) = 'json:"token"'];
}

